# python-stdout-otlp-json-span-exporter

./: LICENSE  README.md  main.py  pyproject.toml
examples/: run_stdout_otlp_json_span_exporter.py
src/: __init__.py  stdout_otlp_json_span_exporter.py  stdout_otlp_json_span_exporter_test.py
